--- a/prettydates.Rmd
+++ b/prettydates.Rmd
@@ -2,13 +2,10 @@
 title: "prettydates"
 author: "ebinabo"
 date: "December 31, 2018"
-output: html_document
+output:
+  html_document: default
+  html_notebook: default
 ---
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
 
 This is the documentation for the package at [prettydates](https://github.com/ebinabo/prettydates)
 
